--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <table>
         </table>
     </div>
+
     <div id="scores">
         <div id="player">
             PLAYER(X)
@@ -23,6 +24,10 @@
         <div id="computer">COMPUTER(O)
             <p id='computer-score'></p>
         </div>
+    </div>
+
+    <div id = "display-winner">
+        winner is 
     </div>
 </body>
 <script type="text/javascript" src="./main.js"></script>
